--- a/.eslintrc
+++ b/.eslintrc
@@ -15,6 +15,14 @@
     "ecmaVersion": 2017,
     "sourceType": "module"
   },
+  "settings": {
+    "react": {
+      "createClass": "createReactClass",
+      "pragma": "React",
+      "version": "16.5"
+    },
+    "propWrapperFunctions": [ "forbidExtraProps" ]
+  },
   "plugins": ["react", "import"],
   "rules": {
     "array-bracket-spacing": ["error", "never"],
