--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babel-eslint": "^9.0.0",
     "eslint": "^5.5.0",
     "eslint-config-prettier": "^3.0.1",
+    "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-prettier": "^2.6.2",
     "eslint-plugin-react": "^7.11.1",
     "prettier": "^1.14.2"
