--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -4,13 +4,16 @@
   "private": true,
   "dependencies": {
     "immutable": "^3.8.2",
+    "lodash": "^4.17.11",
     "material-ui": "^0.20.2",
     "material-ui-icons": "^1.0.0-beta.36",
+    "moment": "^2.22.2",
     "node-sass-chokidar": "^1.3.3",
     "npm-run-all": "^4.1.3",
     "prop-types": "^15.6.2",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
+    "react-immutable-proptypes": "^2.1.0",
     "react-redux": "^5.0.7",
     "react-router": "^3.2.1",
     "react-scripts": "1.1.5",
