--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -16,6 +16,7 @@
     "react-immutable-proptypes": "^2.1.0",
     "react-redux": "^5.0.7",
     "react-router": "^3.2.1",
+    "react-router-redux": "^4.0.8",
     "react-scripts": "1.1.5",
     "react-table": "^6.8.6",
     "redux": "^4.0.0",
