--- a/react-frontend/Dockerfile
+++ b/react-frontend/Dockerfile
@@ -4,8 +4,12 @@ FROM node:8-alpine
 RUN mkdir -p /usr/src/app
 WORKDIR /usr/src/app
 
+COPY package.json .
+
 # Install app dependencies
 RUN npm install
+
+COPY . .
 
 EXPOSE 3000
 CMD ["npm", "start"]
